--- a/_config.yml
+++ b/_config.yml
@@ -9,16 +9,16 @@ exclude:
   - "/vendor/"
 
 # Site settings
-title: Centrarium
-subtitle: "A simple yet classy theme for your Jekyll website or blog"
-email: blcentra@gmail.com
-name: Ben Centra
+title: DBpedia | 
+subtitle: "A Neural QA Model for DBpedia"
+email: panchbhai1969 [at] gmail [dot] com
+name: Anand Panchbhai
 description: >
-  A simple yet classy theme for your Jekyll website or blog.
+  Making data accessible to everyone.
 # Base URL of site (i.e. /blog). It should always start with a slash,
 # and never end with a slash. Set it to a blank value if hosting at the
 # root of your server.
-baseurl: "/centrarium" # the subpath of your site, e.g. /blog/
+baseurl: "/blog/" # the subpath of your site, e.g. /blog/
 url: "http://bencentra.github.io" # the base hostname & protocol for your site
 cover: "/assets/header_image.jpg"
 logo: "/assets/logo.png"
